# Portail

./: .gitignore  404.html  Dockerfile  Jeu2Cartes.ipynb  README.md  app.py  gunicorn_config.py  index.html  install.sh  manifest.json  monSite.json  monSite.wsgi  objects.inv  pyproject.toml  requirements.txt
flask/: index.html
functions/: configure.py  cookieConf.py  general.py  jsonConnector.py  monSite.json
librairies/: index.html
monSite/: __init__.py  pages.py  pyproject.toml  setup.py
monSite/functions/: general.py  jsonConnector.py
monSite/static/css/: profile.css  styles.css
monSite/static/js/: keyboard.js  loadAfter.js  loadFirst.js  scripts.js
monSite/templates/: base.html
monSite/templates/pages/: edit.html  main.html
portail/: __init__.py  gunicorn_config.py
portail/functions/: __init__.py  configure.py  general.py  interface.py  jsonConnector.py  models.py
portail/static/css/: profile.css  profile2.css  settings.css  sortlist.css  styles.css
portail/static/js/: global.js  keyboard.js  loadFirst.js  selection.js  settings.js  sortlist.js  swipes.js
portail/templates/: base.html.j2
portail/templates/pages/: edit.html.j2  main.html.j2  settings.html.j2
static/css/: keyboard.css  styles.css  swipes.css
static/js/: global.js  keyboard.js  loadAfter.js  loadFirst.js  selection.js  sortlist.js  swipes.js
templates/: base.html  base.html.j2
templates/pages/: edit.html  edit.html.j2  main.html  main.html.j2  settings.html.j2
