[project]
name = "monSite_pi.dubs"
version = "0.0.1"
authors = [
  { name="Charles", email="pi.dubs@sfr.fr" },
]
description = "TV, replay et liens, via une app Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General public license",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
